	  added GNU link excetion text to library source files,
	  applyed GNU coding style, removed useless svn ids,
	  added BINARY_SPECIFIER macro re-enables the use of the removed 'b'
	  binary specifier: "%b", "%hb" and "%lb"
	* device/lib/pic16/libc/stdio/vfprintf.c:
	  applied patch #2044424: PIC16: vfprintf
	  thanks Mauro Giachero

2008-09-15 Raphael Neider <rneider AT web.de>

	* src/pic16/device.c (pic16_dump_usection): force udata sections
	  into the addressable range (0..0xFFF), workaround for a gpsim
	  bug preventing simulation of regtest bug1750318
	* src/pic16/ralloc.c (deassignLRs): cosmetic changes,
	  (serialRegAssign): fixed regtest bug-971834,
	  (pic16_packRegisters): avoid null-pointer dereference

2008-09-14 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c, src/pic16/ralloc.c: use
	  SYM_SPIL_LOC/SPIL_LOC macros, no functional changes
	* src/pic16/ralloc.c (rematStr): reimplemented, fixes #1818857

2008-09-12 Borut Razem <borut.razem AT siol.net>

	* support/regression/fwk/testfwk.h:
	  define pdata as data for pic16 target
	  thanks Mauro Giachero

2008-09-11 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bug-221100.c, support/regression/shifts.c,
	  support/regression/absolute.c:
	  applied patch #2105615: Some PIC16 testcase fixlets
	  thanks Mauro Giachero

2008-09-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/gen.c (genCmpGt, genCmpLt): fixed bug 2094505
	* support/regression/tests/bug2094505.c: new, added

2008-09-07 Borut Razem <borut.razem AT siol.net>

	* src/SDCCglue.c, src/SDCCast.c:
	  fixed throw of "excess elements" warning for char arrays

2008-09-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/aslist.c (lstsym): changed old K&R to ANSI
	* src/SDCCicode.c (geniCodeCritical): fixed bug for hc08
	* src/z80/gen.c (genCritical, genEndCritical): fixed bug 2077267
	* support/regression/tests/bug2077267.c: new, added

2008-09-05 Raphael Neider <rneider AT web.de>
